// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works For You should match the snapshot on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root css-1vxs8kb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-3j7il2-MuiGrid-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap css-2xxfxs-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column css-v80pyz-MuiGrid-root"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 css-gcpq5f-MuiTypography-root"
              data-testid="works-for-you-title-0"
            >
              Reece.
            </h1>
            <h1
              class="MuiTypography-root MuiTypography-h1 css-gcpq5f-MuiTypography-root"
              data-testid="works-for-you-title-1"
            >
              Works for you.
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1l0z6ps-MuiGrid-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1f064cs-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-1fgwrjz-MuiGrid-root"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 css-1voab6z-MuiTypography-root"
              data-testid="works-for-you-building-a-future"
            >
              Building a future around you.
            </h1>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-5k1k01-MuiGrid-root"
          >
            <ul
              class="MuiList-root css-1mk9mw3-MuiList-root"
            >
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-wc16b5-MuiTypography-root"
                  data-testid="works-for-you-paragraph-0"
                >
                  'Reece Works for you' is our brand promise to every customer in the Plumbing, HVAC, Waterworks, and Bath & Kitchen industries.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-wc16b5-MuiTypography-root"
                  data-testid="works-for-you-paragraph-1"
                >
                  This isn't just something we say, it's what we prove everyday. We know how hard you work. That's why we're making a long-term commitment to your success, by being a trusted partner who's building our business around yours.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-wc16b5-MuiTypography-root"
                  data-testid="works-for-you-paragraph-2"
                >
                  At Reece, we pride ourselves on adding value to everything we do. Through service that makes it easier for our customers to do business. Building relationships that work hard on both sides of the counter.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-wc16b5-MuiTypography-root"
                  data-testid="works-for-you-paragraph-3"
                >
                  Sharing expertise in the branch and on the job site. Setting a high standard for quality and overall experience. We strive to be the #1 choice in the trades industry.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-wc16b5-MuiTypography-root"
                  data-testid="works-for-you-paragraph-4"
                >
                  That starts by doing what we've done best for over 100 years - proving to every customer that Reece works for you.
                </p>
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Works For You should match the snapshot on mobile 1`] = `
<div>
  <div
    class="MuiGrid-root css-1vxs8kb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1ah58io-MuiGrid-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap css-2xxfxs-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column css-zbfrck-MuiGrid-root"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-154x81l-MuiTypography-root"
              data-testid="works-for-you-title-0"
            >
              Reece.
            </h4>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-154x81l-MuiTypography-root"
              data-testid="works-for-you-title-1"
            >
              Works for you.
            </h4>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-14faiqa-MuiGrid-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column css-80wlp8-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-qka4gj-MuiGrid-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-h3 css-8g2s3z-MuiTypography-root"
              data-testid="works-for-you-building-a-future"
            >
              Building a future around you.
            </h3>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-1g2zsol-MuiGrid-root"
          >
            <ul
              class="MuiList-root css-1mk9mw3-MuiList-root"
            >
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-eyg0r1-MuiTypography-root"
                  data-testid="works-for-you-paragraph-0"
                >
                  'Reece Works for you' is our brand promise to every customer in the Plumbing, HVAC, Waterworks, and Bath & Kitchen industries.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-eyg0r1-MuiTypography-root"
                  data-testid="works-for-you-paragraph-1"
                >
                  This isn't just something we say, it's what we prove everyday. We know how hard you work. That's why we're making a long-term commitment to your success, by being a trusted partner who's building our business around yours.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-eyg0r1-MuiTypography-root"
                  data-testid="works-for-you-paragraph-2"
                >
                  At Reece, we pride ourselves on adding value to everything we do. Through service that makes it easier for our customers to do business. Building relationships that work hard on both sides of the counter.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-eyg0r1-MuiTypography-root"
                  data-testid="works-for-you-paragraph-3"
                >
                  Sharing expertise in the branch and on the job site. Setting a high standard for quality and overall experience. We strive to be the #1 choice in the trades industry.
                </p>
              </div>
              <div
                class="MuiListItemText-root css-rp1sja-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-eyg0r1-MuiTypography-root"
                  data-testid="works-for-you-paragraph-4"
                >
                  That starts by doing what we've done best for over 100 years - proving to every customer that Reece works for you.
                </p>
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
